--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,16 @@ pytest-trio = "^0.6.0"
 coverage = {extras = ["toml"], version = "^5.1"}
 pytest-cov = "^2.10.0"
 
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["redtrio"]
+
+[tool.coverage.report]
+show_missing = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
