--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^5.4.3"
 pytest-trio = "^0.6.0"
 coverage = {extras = ["toml"], version = "^5.1"}
 pytest-cov = "^2.10.0"
+rope = "^0.17.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
