--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ flake8-import-order = "^0.18.1"
 safety = "^1.9.0"
 flake8-docstrings = "^1.5.0"
 darglint = "^1.4.1"
+sphinx-autodoc-typehints = "^1.11.0"
+sphinx-autoapi = "^1.4.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
