--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ flake8-docstrings = "^1.5.0"
 darglint = "^1.4.1"
 sphinx-autodoc-typehints = "^1.11.0"
 sphinx-autoapi = "^1.4.0"
+codecov = "^2.1.7"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
