--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,12 +3,18 @@ on: push
 jobs:
   coverage:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        redis-version: [6]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: '3.8'
         architecture: x64
+    - uses: supercharge/redis-github-action@1.1.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
     - run: pip install nox==2019.11.9
     - run: pip install poetry==1.0.5
     - run: nox --sessions tests-3.8 coverage
