--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
       with:
         python-version: '3.8'
         architecture: x64
+    - uses: supercharge/redis-github-action@1.1.0
+      with:
+        redis-version: 6
     - run: pip install nox==2019.11.9
     - run: pip install poetry==1.0.5
     - run: nox
