--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
       matrix:
         python-version: ['3.8']
         redis-version: [6]
-    name: Python ${{ matrix.python-version }}
+    name: Tests on Python ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
