--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis-version: [6]
+        redis-version: [6.2-rc]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
