--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         architecture: x64
     - uses: supercharge/redis-github-action@1.1.0
       with:
-        redis-version: 6
+        redis-version: 6.2-rc
     - run: pip install nox==2019.11.9
     - run: pip install poetry==1.0.5
     - run: nox
