--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,18 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis-version: [6.2-rc]
+        redis-version: [6.2, 7.0]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.8'
+        python-version: '3.10'
         architecture: x64
-    - uses: supercharge/redis-github-action@1.1.0
+    - uses: supercharge/redis-github-action@1.4.0
       with:
         redis-version: ${{ matrix.redis-version }}
-    - run: pip install nox==2019.11.9
-    - run: pip install poetry==1.0.5
-    - run: nox --sessions tests-3.8 coverage
+    - run: pip install nox==2022.1.7
+    - run: pip install poetry==1.2.0b2
+    - run: nox --sessions tests-3.10 coverage
       env:
         CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
