--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.8'
+        python-version: '3.10'
         architecture: x64
-    - uses: supercharge/redis-github-action@1.1.0
+    - uses: supercharge/redis-github-action@1.4.0
       with:
-        redis-version: 6.2-rc
-    - run: pip install nox==2019.11.9
-    - run: pip install poetry==1.0.5
+        redis-version: '7.0'
+    - run: pip install nox==2022.1.7
+    - run: pip install poetry==1.2.0b2
     - run: nox
     - run: poetry build
     - run: poetry publish --username=__token__ --password=${{ secrets.PYPI_TOKEN }}
