--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,18 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8']
-        redis-version: [6.2-rc]
-    name: Tests on Python ${{ matrix.python-version }}
+        python-version: ['3.9', '3.10']
+        redis-version: ['6.2', '7.0']
+    name: Tests on Python ${{ matrix.python-version }}, Redis ${{ matrix.redis-version }}
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
         architecture: x64
-    - uses: supercharge/redis-github-action@1.1.0
+    - uses: supercharge/redis-github-action@1.4.0
       with:
         redis-version: ${{ matrix.redis-version }}
-    - run: pip install nox==2019.11.9
-    - run: pip install poetry==1.0.5
+    - run: pip install nox==2022.1.7
+    - run: pip install poetry==1.2.0b2
     - run: nox
