--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         python-version: '3.10'
         architecture: x64
-    - run: pip install nox==2022.1.7
     - run: pip install poetry==1.2.0b2
-    - run: nox -s lint
+    - run: poetry install --only lint
+    - run: poetry run flake8 src tests docs/conf.py
