--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.8'
+        python-version: '3.10'
         architecture: x64
-    - run: pip install nox==2019.11.9
-    - run: pip install poetry==1.0.5
-    - run: nox -s lint
+    - run: pip install poetry==1.2.0b2
+    - run: poetry install --only lint
+    - run: poetry run flake8 src tests docs/conf.py
